# distroless-python-poetry

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
